--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "version": "0.0.0",
   "author": "Jeff Dickey @jdxcode",
   "bugs": "https://github.com/heroku/heroku-cli-notifications/issues",
-  "dependencies": {},
+  "dependencies": {
+    "node-notifier": "^5.2.1"
+  },
   "devDependencies": {
     "@oclif/tslint": "^1.1.0",
     "@types/chai": "^4.1.2",
     "@types/mocha": "^5.0.0",
     "@types/node": "^9.6.2",
+    "@types/node-notifier": "^0.0.28",
     "chai": "^4.1.2",
     "mocha": "^5.0.5",
     "ts-node": "5",
