--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "node-notifier": "^5.2.1"
   },
   "devDependencies": {
-    "@oclif/tslint": "^1.1.1",
+    "@oclif/tslint": "^1.1.2",
     "@types/chai": "^4.1.3",
     "@types/mocha": "^5.2.0",
-    "@types/node": "^10.1.0",
+    "@types/node": "^10.1.2",
     "@types/node-notifier": "^0.0.28",
     "chai": "^4.1.2",
-    "mocha": "^5.1.1",
-    "ts-node": "6.0.3",
+    "mocha": "^5.2.0",
+    "ts-node": "^6.0.5",
     "tslib": "^1.9.1",
     "tslint": "^5.10.0",
     "typescript": "^2.8.3"
