--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,8 @@ jobs:
           keys:
             - v1-yarn-{{checksum ".circleci/config.yml"}}-{{ checksum "yarn.lock"}}
             - v1-yarn-{{checksum ".circleci/config.yml"}}
-      - run: .circleci/greenkeeper
-      - run: yarn add -D nyc@11 @oclif/nyc-config@1 mocha-junit-reporter@1
+      - run: yarn
+      - run: yarn add -D nyc@13 @oclif/nyc-config@1 mocha-junit-reporter@1
       - run: |
           mkdir -p reports
           $NYC yarn test --reporter mocha-junit-reporter
@@ -33,7 +33,7 @@ jobs:
       - add_ssh_keys
       - checkout
       - restore_cache: *restore_cache
-      - run: yarn global add @oclif/semantic-release@2 semantic-release@15
+      - run: yarn global add @oclif/semantic-release@3 semantic-release@15
       - run: yarn --frozen-lockfile
       - run: |
           export PATH=/usr/local/share/.config/yarn/global/node_modules/.bin:$PATH
