--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,27 +1,32 @@
-name: heroku/heroku-cli-notifications/@heroku-cli/notifications
+name: Node CI
 on:
   push:
 
 jobs:
-  node-latest:
+  test:
+    runs-on: ${{ matris.os }}
+    strategy:
+      matrix:
+        node-version: [8, lts]
+        os: [ubuntu-latest]
     defaults:
       run:
         working-directory: "~/cli"
-    runs-on: ubuntu-latest
-    container:
-      image: node:latest
     env:
       NYC: yarn exec nyc -- --nycrc-path node_modules/@oclif/nyc-config/.nycrc
       MOCHA_FILE: reports/mocha.xml
     steps:
     - uses: actions/checkout@v2
-    - name: restore_cache
+    - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
       uses: actions/cache@v3
+      id: yarn-cache
       with:
-        key: v1-yarn-{{checksum ".circleci/config.yml"}}-{{ checksum "yarn.lock"}}
-        restore-keys: |-
-          v1-yarn-{{checksum ".circleci/config.yml"}}-{{ checksum "yarn.lock"}}
-          v1-yarn-{{checksum ".circleci/config.yml"}}
+        path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+        restore-keys: |
+      ${{ runner.os }}-yarn-
     - run: yarn
     - run: yarn add -D nyc@13 @oclif/nyc-config@1 mocha-junit-reporter@1
     - run: |
@@ -31,34 +36,7 @@ jobs:
     - uses: actions/upload-artifact@v2
       with:
         path: "~/cli/reports"
-  node-8:
-    defaults:
-      run:
-        working-directory: "~/cli"
-    runs-on: ubuntu-latest
-    container:
-      image: node:8
-    env:
-      NYC: yarn exec nyc -- --nycrc-path node_modules/@oclif/nyc-config/.nycrc
-      MOCHA_FILE: reports/mocha.xml
-    steps:
-    - uses: actions/checkout@v2
-    - name: restore_cache
-      uses: actions/cache@v3
-      with:
-        key: v1-yarn-{{checksum ".circleci/config.yml"}}-{{ checksum "yarn.lock"}}
-        restore-keys: |-
-          v1-yarn-{{checksum ".circleci/config.yml"}}-{{ checksum "yarn.lock"}}
-          v1-yarn-{{checksum ".circleci/config.yml"}}
-    - run: yarn
-    - run: yarn add -D nyc@13 @oclif/nyc-config@1 mocha-junit-reporter@1
-    - run: |
-        mkdir -p reports
-        $NYC yarn test --reporter mocha-junit-reporter
-        $NYC report --reporter text-lcov > coverage.lcov
-    - uses: actions/upload-artifact@v2
-      with:
-        path: "~/cli/reports"
+
   release:
     if: github.ref == 'refs/heads/master'
     defaults:
