--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
 
 jobs:
   test:
-    runs-on: ${{ matris.os }}
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         node-version: [8, lts]
