--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@heroku-cli/notifications",
   "description": "display notifications in Heroku CLI commands",
   "version": "1.2.3",
-  "author": "Jeff Dickey @jdxcode",
+  "author": "Heroku",
   "bugs": "https://github.com/heroku/heroku-cli-notifications/issues",
   "dependencies": {
     "node-notifier": "^8.0.1"
