--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "author": "Heroku",
   "bugs": "https://github.com/heroku/heroku-cli-notifications/issues",
   "dependencies": {
-    "node-notifier": "^8.0.1"
+    "node-notifier": "^8.0.1",
+    "@types/node-notifier": "8.0.5"
   },
   "devDependencies": {
     "@oclif/tslint": "^3.1.0",
     "@types/chai": "^4.1.4",
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.9.4",
-    "@types/node-notifier": "^0.0.28",
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
     "ts-node": "^7.0.1",
