--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,13 +7,13 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node-version: [8, lts]
-        os: [ubuntu-latest]
+        node-version: [20, 22]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     env:
       NYC: yarn exec nyc -- --nycrc-path node_modules/@oclif/nyc-config/.nycrc
       MOCHA_FILE: reports/mocha.xml
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Get yarn cache directory path
       id: yarn-cache-dir-path
       run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
@@ -30,6 +30,6 @@ jobs:
         mkdir -p reports
         $NYC yarn test --reporter mocha-junit-reporter
         $NYC report --reporter text-lcov > coverage.lcov
-    - uses: actions/upload-artifact@v2
+    - uses: actions/upload-artifact@v4
       with:
         path: "~/cli/reports"
