--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,35 +1,23 @@
-name: Node CI
+name: Test
 on:
-  push:
+  push
 
 jobs:
   test:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node-version: [20, 22]
+        node-version: [20.x, 22.x]
         os: [ubuntu-latest, macos-latest, windows-latest]
-    env:
-      NYC: yarn exec nyc -- --nycrc-path node_modules/@oclif/nyc-config/.nycrc
-      MOCHA_FILE: reports/mocha.xml
     steps:
-    - uses: actions/checkout@v4
-    - name: Get yarn cache directory path
-      id: yarn-cache-dir-path
-      run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
-    - uses: actions/cache@v3
-      id: yarn-cache
-      with:
-        path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-yarn-
-    - run: yarn
-    - run: yarn add -D nyc@13 @oclif/nyc-config@1 mocha-junit-reporter@1
-    - run: |
-        mkdir -p reports
-        $NYC yarn test --reporter mocha-junit-reporter
-        $NYC report --reporter text-lcov > coverage.lcov
-    - uses: actions/upload-artifact@v4
-      with:
-        path: "~/cli/reports"
+      - uses: actions/checkout@v4
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: yarn
+      - run: yarn --frozen-lockfile
+      - name: unit tests
+        run: yarn test
+      - name: linting
+        run: yarn lint
