--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,7 +9,7 @@ updates:
       day: "sunday"
       timezone: "America/Los_Angeles"
   commit-message:
-      prefix: "chore"
+      prefix: "deps"
 - package-ecosystem: "npm"
   directory: "/"
   open-pull-requests-limit: 5
